fix gap

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -392,7 +392,7 @@
   .header {
     padding-block: 24px;
     &Controls {
-      gap: 20px;
+      gap: 18px;
     }
   }
 }
